# tarea2_UCSP_PIpeline_E2E

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
reports/: informe_tecnico.md
src/tarea2/: __init__.py  cli.py  config.py  data.py  modeling.py  monitoring.py
