[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarea2-mlops-pipeline"
version = "0.1.0"
description = "Pipeline ML end-to-end con enfoque MLOps para una tarea academica."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "joblib>=1.4.0",
  "mlflow>=2.17.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.14.0",
  "uvicorn>=0.32.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

